# wheaton_llm_class

./: .gitignore  README.md  pyproject.toml  serve_and_pull.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
notebooks_instructor/: 01_llm_intro.ipynb  02_in_context_rag.ipynb  03_agents.ipynb
notebooks_student/: 01_llm_intro_student.ipynb  02_in_context_rag_student.ipynb  03_agents_student.ipynb
