[project]
authors = [{name = "bpben", email = "yksrotab@gmail.com"}]
name = "wheaton_class"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = ["llamabot[rag]>=0.11.2,<0.12", "llamabot[ui]"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
wheaton_class = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = ">=4.3.5,<5"
pixi-kernel = ">=0.6.1,<0.7"
python = "==3.10"
ipykernel = ">=6.29.5,<7"
pip = ">=25.0.1,<26"
sentence-transformers = ">=3.4.1,<4"
ipywidgets = "==7.7.1"
